samples/_failures_safe/1761728097_faa540_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a5a571a.c: In function ‘main’:
./samples/SAFE/__tmp_9a5a571a.c:144:9: error: expected declaration or statement at end of input
  144 |         printf("1. Add matrices (A + B)\n");
      |         ^~~~~~
./samples/SAFE/__tmp_9a5a571a.c:144:9: error: expected declaration or statement at end of input
